# cmor438-football-ml

./: .gitignore  README.md  mlcontext.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/supervised_learning/: 01_perceptron.ipynb  02_linear_regression.ipynb  03_logistic_regression.ipynb  04_knn.ipynb  05_mlp.ipynb  06_decision_tree.ipynb  07_ensemble.ipynb  08_svm.ipynb  09_naive_bayes.ipynb  10_ridge_lasso.ipynb
notebooks/unsupervised_learning/: 11_kmeans.ipynb  12_dbscan.ipynb  13_pca.ipynb  14_hierarchical.ipynb
src/football_ml/: exceptions.py
src/football_ml/supervised_learning/: decision_tree.py  ensemble.py  knn.py  linear_regression.py  logistic_regression.py  mlp.py  naive_bayes.py  perceptron.py  ridge_lasso.py  svm.py
src/football_ml/unsupervised_learning/: dbscan.py  hierarchical.py  kmeans.py  pca.py
src/football_ml/utils/: logger.py
tests/: conftest.py
tests/unit/: test_dbscan.py  test_decision_tree.py  test_ensemble.py  test_hierarchical.py  test_kmeans.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_mlp.py  test_naive_bayes.py  test_pca.py  test_perceptron.py  test_ridge_lasso.py  test_svm.py
